--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="collisionTests.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="gamestate.h" />
     <ClInclude Include="sfwdraw.h" />
